--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 .body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 90vh;
@@ -9,4 +10,18 @@
   width: 750px;
   height: 500px;
   border: 2px solid #000000;
+}
+.messages {
+  width: 750px;
+  border: 2px solid #000000;
+  height: 50px;
+  margin: 50px;
+  font-size: 25px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  #canvas {
+    width: 350px;
+    height: 270px;
+  }
 }
