--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,37 @@
   font-size: 25px;
   text-align: center;
 }
+.modal {
+  position: fixed;
+  width: 650px;
+  height: 600px;
+  background-color: white;
+  padding: 20px;
+  border: 3px solid #000000;
+}
+.header-list {
+  display: flex;
+  justify-content: space-between;
+}
+.image-list {
+  width: 20px;
+  height: 20px;
+  padding: 15px;
+  cursor: pointer;
+}
+.list {
+  list-style: none;
+}
+.list-item {
+  display: flex;
+  margin: 15px;
+}
+.list-paragraph {
+  padding: 15px;
+}
+.hidden {
+  display: none;
+}
 @media (max-width: 768px) {
   #canvas {
     width: 350px;
